force-app/main/default/objects/InvoiceItem__c/InvoiceItem__c.object-meta.xml
<CustomObject>
    <description>Object to track invoice&apos;s line items.</description>
    <label>Invoice Item</label>
    <nameField>
        <displayFormat>II-{0000}</displayFormat>
        <label>Invoice Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>