force-app/main/default/objects/InvoiceItem__c/fields/InvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>InvoiceDate__c</fullName>
    <description>Date when the invoice item is generated.</description>
    <label>Invoice Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>