force-app/main/default/objects/InvoiceItem__c/fields/OrderItem__c.field-meta.xml
<CustomField>
    <fullName>OrderItem__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>A lookup relationship to the Order Product object to link the line item to a specific product.</description>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Invoice Items</relationshipLabel>
    <relationshipName>Invoice_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>